--- a/src/sass/_post.scss
+++ b/src/sass/_post.scss
@@ -435,10 +435,10 @@ body {
       content: " ¶";
     }
   }
-  a:not([href*="blog.fooleap.org"]):not([href^="#"]):not([href^="/"]):not([target="_blank"]),
+  a:not([href*="znfang.github.io"]):not([href^="#"]):not([href^="/"]):not([target="_blank"]),
   a[href^="#note"]{
-    vertical-align:super;
-    font-size: smaller;
+    vertical-align:middle;
+    font-size: small;
   }
   blockquote {
     font-size: 13px;
