--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,11 +51,11 @@
       };
   </script>
   <script src="/assets/main.min.js?v={{ site.time | date: '%s' }}"></script>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
+  <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+  <!-- <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-6078936939140989",
       enable_page_level_ads: true
     });
-  </script>
+  </script> -->
 </head>
