--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
 <footer>
-    <div class="container">
+    <div class="container" style="font-size: smaller;">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p class="copyright text-muted">
-                    Copyright {{ site.time | date: '%Y' }} <i class="fa fa-heart" aria-hidden="true" style="color: #0085A1"></i> znfnag. Powered by Jekyll&GitHub.</span> 
+                    Copyright {{ site.time | date: '%Y' }} <i class="fa fa-heart" aria-hidden="true" style="color: #0085A1"></i> znan. Powered by Jekyll&GitHub.</span> 
 您是本站第<span id="busuanzi_value_site_uv"></span>位小伙伴</p> 
                     <p class="copyright text-muted" id="count">
                 </p>
