--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@ layout: compress
                 </h1>
                     <h2 class="page-subtitle">
                     {% if page.date %}
-                    <time class="post-date" datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%Y 年 %m 月 %d 日 %R" }}</time>
+                    <time class="post-date" datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%Y 年 %m 月 %d 日 " }}</time>
                         <span class="post-count">本文 {{ page.content | strip_html | strip_newlines | remove: " " | size }} 字，阅读全文约需 {{ page.content | strip_html | strip_newlines | remove: " " | size | divided_by: 350 | plus: 1 }} 分钟</span>
                     {% elsif paginator 
                     or page.url == '/tech.html' 
