注释不必要的脚本

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 </footer>
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
-<script>
+<!-- <script>
   //日期计算有点问题，实际是从5月1日开始的，但是计时不对，提前一个月，计时器就是对的
   window.setInterval('counter()',1000);
   function counter(){
@@ -30,6 +30,6 @@
     var str="我的博客已默默运行了" + day + "天" + hour +"时" + minute + "分" + second + "秒";
     document.getElementById('count').innerHTML=str;
   }
-</script>
+</script> -->
 
 
