--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,13 +14,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.3, user-scalable=no" />
   <meta name="description" content="{{ desc }}" />
   <meta name="keywords" content="{% if page.tags %}{{ page.tags | join: ', '}}{% else %}{{ site.keywords | join: ', ' }}{% endif %}" />
-  <meta name="author" content="fooleap" />
+  <meta name="author" content="znan" />
   <meta name="renderer" content="webkit">
   <meta http-equiv="Cache-Control" content="no-transform" />
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <link rel="canonical" href="{{ page.url | replace: 'index.html','' | prepend: site.home }}" />
   <link rel="icon" href="/favicon.ico" />
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }} Atom Feed" href="https://blog.fooleap.org/atom.xml" />
+  <!-- <link rel="alternate" type="application/atom+xml" title="{{ site.title }} Atom Feed" href="https://blog.fooleap.org/atom.xml" /> -->
   <link rel="stylesheet" href="/assets/main.min.css?v={{ site.time | date: '%s' }}" />
   <script>
     var ua = navigator.userAgent,
